[FIX] card title alignement

--- a/src/app/components/education/education.component.less
+++ b/src/app/components/education/education.component.less
@@ -10,12 +10,6 @@ mat-toolbar {
     img {
         max-height: 45px;
     }
-    .v-align-super {
-        // vertical-align: super;
-    }
-    .v-align-sub {
-        vertical-align: sub;
-    }
 }
 
 mat-toolbar.education-title {
